--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Github Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -6,27 +6,26 @@ on:
       - main
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-    
-        steps:
-        - name: Checkout repository
-            uses: actions/checkout@v3
-    
-        - name: Set up Node.js
-            uses: actions/setup-node@v3
-            with:
-            node-version: '16'
-    
-        - name: Install dependencies
-            run: npm install
-    
-        - name: Build project
-            run: npm run build
-    
-        - name: Deploy to GitHub Pages
-            uses: peaceiris/actions-gh-pages@v3
-            with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./dist
+  deploy:
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
