chore: CICD 개선(배포 검증 및 디스코드 알림 추가)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,18 @@ jobs:
           publish_dir: ./dist
 
       - name: Verify deployment
-        run: curl -IL https://ajouclub.co.kr/ | grep "200 OK"
+        run: |
+          for i in {1..5}; do
+            echo "🔍 Trying to verify deployment (attempt $i)..."
+            if curl -IL https://ajouclub.co.kr | grep "200"; then
+              echo "✅ Deployment verified!"
+              exit 0
+            fi
+            echo "⏳ Waiting for site to become available..."
+            sleep 10
+          done
+          echo "❌ Deployment verification failed after 5 attempts."
+          exit 1
 
       - name: Notify on success (Discord)
         if: success()
@@ -44,17 +55,19 @@ jobs:
           -d '{
             "embeds": [{
               "title": "✅ GitHub Pages 배포 성공",
-              "description": "프로젝트 AjouClub이 정상적으로 배포되었습니다.",
+              "description": "프로젝트 **AjouClub**이 정상적으로 배포되었습니다.",
               "color": 65280,
               "fields": [
                 {"name": "Repository", "value": "${{ github.repository }}", "inline": true},
-                {"name": "Run ID", "value": "${{ github.run_id }}", "inline": true}
+                {"name": "Run ID", "value": "${{ github.run_id }}", "inline": true},
+                {"name": "URL", "value": "https://ajouclub.co.kr"}
               ],
               "footer": {"text": "GitHub Actions - 자동 배포 알림"}
             }]
           }' \
           ${{ secrets.DISCORD_WEBHOOK_URL }}
 
+      # 9️⃣ 배포 실패 시 Discord 알림
       - name: Notify on failure (Discord)
         if: failure()
         run: |
@@ -62,7 +75,7 @@ jobs:
           -d '{
             "embeds": [{
               "title": "🚨 GitHub Pages 배포 실패",
-              "description": "워크플로 ${{ github.workflow }} 이(가) 실패했습니다.",
+              "description": "워크플로 **${{ github.workflow }}** 이(가) 실패했습니다.",
               "color": 16711680,
               "fields": [
                 {"name": "Repository", "value": "${{ github.repository }}", "inline": true},
